--- a/index.html
+++ b/index.html
@@ -27,20 +27,23 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script type="text/javascript">
     const hours = ["9AM", "10AM", "11AM", "12PM", "1PM", "2PM", "3PM", "4PM", "5PM"];
+    const compareHours = [9, 10, 11, 12, 13, 14, 15, 16, 17];
     let tasks = [];
+    let m = moment();
+    let hour = m.hours();
+
 
     function getTasks() {
       let storedTasks = JSON.parse(localStorage.getItem("tasks"))
       if (storedTasks !== null) {
         tasks = storedTasks;
-        console.log(tasks);
-        console.log(typeof (tasks));
       }
     };
 
     function storeTasks() {
       localStorage.setItem("tasks", JSON.stringify(tasks));
     }
+    $("#currentDay").text("Today is " + m.format("dddd, MMMM Do YYYY"));
 
     function renderCal() {
       for (i = 0; i < hours.length; i++) {
@@ -54,7 +57,15 @@
         newHour.addClass("col");
         newHour.text(hours[i]);
         newText.addClass("textarea");
-        newText.addClass("present");
+        if (compareHours[i] < hour) {
+          newText.addClass("past");
+        }
+        if (compareHours[i] === hour) {
+          newText.addClass("present");
+        }
+        if (compareHours[i] > hour) {
+          newText.addClass("future");
+        }
         newText.addClass("col-10");
         newText.attr("data-hour", hours[i]);
         for (j = 0; j < tasks.length; j++) {
@@ -77,7 +88,6 @@
             hour: "" + temp,
             text: "" + text
           }
-          console.log(myTask);
           tasks.push(myTask);
           storeTasks();
         });
@@ -86,16 +96,11 @@
         newBlock.append(newText);
         newBlock.append(newSave);
         console.log(localStorage);
-        //render tasks for each data-hour text area that has task
       }
     };
 
     getTasks();
     renderCal();
-    //save tasks
-    //test before or after with moment
-
-
 
 
   </script>
